Fixes push-button overflow while preserving text ellipsis

--- a/client/src/app/modules/pixlisecore/components/atoms/buttons/push-button/push-button.component.scss
+++ b/client/src/app/modules/pixlisecore/components/atoms/buttons/push-button/push-button.component.scss
@@ -245,8 +245,13 @@
 
 .clickable {
   position: relative;
-  overflow: hidden;
-  text-overflow: ellipsis;
+
+  .btn-content {
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
 
   &.flex-btn {
     display: flex;
